package com.lethanh98.chainofresponsibillity.problem.service;

public class NumberOrderValidateProcess {
    public boolean numberOrderValidate(Integer numberOrder) {
        return numberOrder < 20;
    }
}
